--- a/sites/all/modules/_custom/sirius/css/table.css
+++ b/sites/all/modules/_custom/sirius/css/table.css
@@ -1,3 +1,8 @@
+table.sirius_table td, 
+table.sirius_table th {
+	vertical-align: top;
+}
+
 table.sirius_table tbody tr.inactive td,
 table.sirius_table tbody tr.gray td,
 table.sirius_table tbody tr.grey td {
@@ -20,3 +25,9 @@ table.sirius_table tbody tr.yellow td {
 	background-color: #ffff99;
 }
 
+
+
+table.sirius_table_form td div.form-item {
+	margin-top:  0;
+	margin-bottom:  0;
+}
