--- a/sites/all/themes/at_sirius/css/at_sirius.css
+++ b/sites/all/themes/at_sirius/css/at_sirius.css
@@ -4219,3 +4219,38 @@ body.cke_editable_themed {
   clear: none;
   border: none;
 }
+
+
+
+
+.region-footer .block-masquerade {
+  padding-top: 10px;
+}
+
+.region-footer .block-masquerade .description {
+  display: none;
+}
+
+.region-footer .block-masquerade .block-title {
+  float: left;
+  font-weight: bold;
+  display: inline-block;
+  padding-top: 4px;
+  padding-right: 5px;
+  font-size: 1.1em;
+}
+
+.region-footer .block-masquerade .block-content {
+  display: inline-block;
+  float: left;
+}
+
+.region-footer .block-masquerade .block-content input[type=submit] {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  font-size: 1.1em;
+  margin: 0;
+  margin-left: 5px;
+}
