--- a/sites/all/themes/at_sirius/css/page_frame.at_sirius.css
+++ b/sites/all/themes/at_sirius/css/page_frame.at_sirius.css
@@ -28,12 +28,17 @@ img.banner-logo {
     /* border-bottom: solid 4px #5984be; */
     background: transparent;
 }
+#page-banner .banner-wrapper {
+  margin-left: 36px;
+  margin-right: 36px;
+}
 #page-banner .user-links {
 	z-index: 9;
 	color: #fff;
 	font-size: 14px;
 	float: right;
 	text-align: right;
+	margin-right: 36px;
 }
 #page-banner .user-links a {
 	color: #fff;
@@ -93,6 +98,7 @@ div.region-help {
 
 .banner-menu-outer-wrapper {
     background-color: #ffffff;
+    min-height: 16px;
 }
 
 #block-grievance-grievance-quicksearch,
