--- a/sites/all/themes/at_sirius/css/at_sirius.css
+++ b/sites/all/themes/at_sirius/css/at_sirius.css
@@ -758,7 +758,7 @@ thead th {
   background: #f5f5f5;
 }
 tbody {
-  border-top: 1px solid #eee;
+  border-top: 1px solid #5984be;
 }
 td,th {
   margin: 0;
