--- a/sites/all/modules/_custom/sirius/css/form.css
+++ b/sites/all/modules/_custom/sirius/css/form.css
@@ -20,3 +20,18 @@
 	display: inline-block;
 	padding-right: 10px;
 }
+
+.sirius_form_inline label {
+	float: left;
+	display: inline-block;
+	width: 100px;
+	font-weight: bold;
+}
+
+.sirius_form_inline .form-item {
+	clear: left;
+}
+
+.sirius_form_inline .container-inline-date .form-item .form-item {
+	clear: none;
+}
