--- a/sites/all/modules/_custom/sirius/css/table.css
+++ b/sites/all/modules/_custom/sirius/css/table.css
@@ -1,7 +1,15 @@
+/**
+ * Layout
+ */
+
 table.sirius_table td, 
 table.sirius_table th {
 	vertical-align: top;
 }
+
+/**
+ * Row colors
+ */
 
 table.sirius_table tbody tr.inactive td,
 table.sirius_table tbody tr.gray td,
@@ -25,9 +33,28 @@ table.sirius_table tbody tr.yellow td {
 	background-color: #ffff99;
 }
 
-
-
 table.sirius_table_form td div.form-item {
 	margin-top:  0;
 	margin-bottom:  0;
+}
+
+/**
+ * Basic table style
+ */
+
+.sirius_table_basic, 
+.sirius_table_basic tr,
+.sirius_table_basic td,
+.sirius_table_basic th {
+	border:  1px solid #999999;
+}
+
+.sirius_table_basic th {
+	border-bottom: 3px solid #aaaaaa;
+}
+
+.sirius_table_basic tr,
+.sirius_table_basic td,
+.sirius_table_basic th {
+	padding: 4px;
 }
