--- a/sites/all/modules/_custom/sirius_edls/css/sheet.css
+++ b/sites/all/modules/_custom/sirius_edls/css/sheet.css
@@ -16,3 +16,19 @@
 	clear: both;
 	display: table;
 }
+
+/*
+.sirius_edls_summary {
+	border: 1px solid #333333;
+	background-color: #ffffff;
+	padding: 10px;
+	margin-top: 10px;
+}
+
+#content .sirius_edls_summary h2 {
+	padding-top: 0;
+	padding-bottom: 0;
+	margin-top: 0;
+	margin-bottom: 0;
+}
+*/
