Remove position; various other changes

--- a/sites/all/modules/_custom/sirius_edls/css/sheet.css
+++ b/sites/all/modules/_custom/sirius_edls/css/sheet.css
@@ -6,9 +6,11 @@
 	font-weight: bold;
 }
 
-.sirius_edls_crew {
-	width: 40%;
-	float: left;
+/*
+.sirius_edls_crews {
+  column-count: 2;
+  column-gap: 10px;
+  margin-top: 10px;
 }
 
 .sirius_edls_crews::after {
@@ -17,18 +19,48 @@
 	display: table;
 }
 
-/*
-.sirius_edls_summary {
-	border: 1px solid #333333;
-	background-color: #ffffff;
-	padding: 10px;
-	margin-top: 10px;
-}
-
-#content .sirius_edls_summary h2 {
-	padding-top: 0;
-	padding-bottom: 0;
-	margin-top: 0;
-	margin-bottom: 0;
+.sirius_edls_crew {
+  margin: 0;
+  display: grid;
+  grid-template-rows: 1fr auto;
+  margin-bottom: 10px;
+  break-inside: avoid;
+  border: 1px solid #333333;
+  background-color: #ffffff;
+  padding: 10px;
 }
 */
+
+#content .sirius_edls_crew h2 {
+	margin-top: 0;
+	padding-top: 0;
+}
+
+.sirius_edls_notes_wrap {
+  margin-bottom: 10px;
+}
+.sirius_edls_notes_wrap .sirius_edls_notes {
+  display: inline-block;
+}
+
+.sirius_edls_page_number {
+  font-weight: bold;
+  text-align: right;
+}
+
+.sirius_edls_page_break {
+  page-break-after: always;
+}
+
+.sirius_edls_assignment_extra {
+  float: right;
+  font-size: 75%;
+  font-weight: bold;
+}
+
+@media print {
+  .sirius_edls_crew {
+    font-size: 85%;
+  }
+  #messages { display: none; }
+}
