--- a/sites/all/modules/_custom/sirius_edls/css/sheet_workers.css
+++ b/sites/all/modules/_custom/sirius_edls/css/sheet_workers.css
@@ -173,6 +173,7 @@
 .sirius_edls_notes_wrap {
 	border: 1px solid #333333;
 	padding: 5px;
+	margin-bottom: 8px;
 }
 
 #content .sirius_edls_notes_wrap h2 {
