--- a/sites/all/modules/_custom/sirius/css/comm.css
+++ b/sites/all/modules/_custom/sirius/css/comm.css
@@ -1,6 +1,7 @@
 .sirius_comm_section {
 	padding: 10px;
-	margin: 10px;
+	margin: 0;
+	margin-bottom: 10px;
 	border: 1px solid #cccccc;
 	background-color: #ffffff;
 }
@@ -29,3 +30,20 @@
 	border-color: #009900;
 }
 
+.sirius_comm_from {
+	float: left;
+	width: 45%;
+	display: inline-block;
+}
+
+.sirius_comm_to {
+	float: right;
+	width: 45%;
+	display: inline-block;
+}
+
+.sirius_comm_fromto::after {
+  content: '';
+  display: block;
+  clear: both;
+}
