--- a/sites/all/modules/_custom/sirius_edls/css/sheet_workers.css
+++ b/sites/all/modules/_custom/sirius_edls/css/sheet_workers.css
@@ -47,6 +47,10 @@
 	background-color: #000000;
 }
 
+.sirius_edls_worker_indicator_dot_reserved {
+	background-color: #aaaaff;
+}
+
 .sirius_edls_worker_indicator_dot_draft {
 	background-color: #aaaaaa;
 }
