--- a/sites/all/themes/at_sirius/css/at_sirius.css
+++ b/sites/all/themes/at_sirius/css/at_sirius.css
@@ -86,6 +86,11 @@ p {
 }
 
 /* Page */
+
+h1#page-title .sirius-pageicon {
+  color: #999999;
+}
+
 h1#page-title {
   font-size: 1.33em;
   padding: 0;
