Add printonly class

--- a/sites/all/themes/at_sirius/css/at_sirius.css
+++ b/sites/all/themes/at_sirius/css/at_sirius.css
@@ -3304,10 +3304,13 @@ table.grievance-timeline tr.pending {
   }
 }
 
-
 @media screen {
   div.grievance-letter-page-break {
     border-bottom: 2px dashed #1b4784;
+  }
+
+  div.sirius_printonly {
+    display: none;
   }
 }
 
